# Push2D

./: .gitignore  Makefile  README.md  config_example.yaml  play.py  push2d_simulator.py  pyproject.toml  test.py
.github/workflows/: healthcheck.yml  lint.yml
push2d/: __init__.py  component.py  environment.py  types.py  variable.py  variants.py  wrapper.py
push2d-simulator/: components.py
push2d_core/: environment.py
push2d_simulator/: __init__.py  core.py
push_2d/: component.py  core.py  reward.py  wrapper.py
src/: components.py  config_example.yaml  env.py  main.py  test.py  utils.py
src/push2d-simulator/: __init__.py  core.py
src/push2d_simulator/: config_example.yaml  core.py  env.py
src/push_2d/: __init__.py  agent.py  component.py  core.py  environment.py  reward.py  space.py  types.py  wrapper.py
src/push_2d/component/: __init__.py  agent.py  dynamic.py  kinematic.py  meta.py  static.py
src/push_2d/environments/: push_2d_env.yaml  push_2d_task.yaml
src/push_2d/settings/: ball_in_box.yaml  button.yaml  original.yaml  push_2d_task.yaml
src/push_2d/space/: __init__.py  button.py  meta.py
src/push_2d/utils/: config.py
