[project]
name = "push-2d"
version = "3.1.0"
description = "Add your description here"
authors = [
    { name = "nomutin", email = "nomura0508@icloud.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "pygame>=2.5.2",
    "pymunk>=6.5.1",
    "nptyping>=2.5.0",
    "gymnasium>=0.29.1",
    "hydra-core>=1.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "isort>=5.12.0",
    "black>=23.9.1",
    "ruff>=0.0.292",
    "mypy>=1.6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
lint = { chain = [" black . --check", "isort . --check-only", "ruff .", "mypy ."] }
format = { chain = [" black .", "isort .", "ruff --fix ."] }

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79

[tool.ruff]
select = ["ALL"]
ignore = ["D203", "D212", "ANN", "PGH003", "FBT", ]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv",]
line-length = 79
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py38"

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
# TODO: turn these into true
disallow_untyped_calls = false
warn_return_any = false
