[project]
name = "push-2d"
version = "3.2.0"
description = "Add your description here"
authors = [
    { name = "nomutin", email = "nomura0508@icloud.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "pygame>=2.5.2",
    "pymunk>=6.5.1",
    "nptyping>=2.5.0",
    "gymnasium>=0.29.1",
    "hydra-core>=1.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.6.0",
    "ruff>=0.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY001",  # missing-copyright-notice
    "ISC001",  # single-line-implicit-string-concatenation
    "COM812",  # missing-comma-in-multiline
]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.8"

[tool.ruff.lint.isort]
known-first-party = ["push_2d"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
